"i fixed overflow"

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -97,6 +97,5 @@ color: #33475b;
 .fuja-img {
     margin-top: 40px;
     width: 600px;
-    position: absolute;
     margin-right: 30px;
 }
